# noesisnoema-pipeline

./:  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
chunker/: __init__.py  chunk_record.py  token_chunker.py
cli/: __init__.py  build_ragpack.py
docs/: epic3-ragpack-knowledge-engine-alignment.md  mcp-write-probe.md
docs/audit/: 2026-06-16-embedding-collapse-and-whitespace.md
embedder/: __init__.py  deterministic_embedder.py  llamacpp_embedder.py
extraction/: __init__.py  pdf_extractor.py  text_quality.py
notebooks/: build_ragpack_v1_2.ipynb  chunk_embed_generator.ipynb
ragpack/: __init__.py  manifest_builder.py  ragpack_builder.py  ragpack_writer.py
schemas/: manifest_v1_1.json  manifest_v1_2.json
tests/: test_chunk_record.py  test_cli_build.py  test_cli_build_v1_2.py  test_deterministic_embedder.py  test_ragpack_builder.py
tests/embedder/: test_llamacpp_embedder.py
tests/extraction/: test_text_quality.py
tests/ragpack/: test_manifest_builder.py
tests/schemas/: test_manifest_v1_2.py
writer/: pack_writer.py
