[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "noesisnoema-pipeline"
version = "0.3.0"
description = "Deterministic RAGPack generator — EPIC3"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.20.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.21.0",
    "pyarrow>=14.0.0",
    "typer>=0.9.0",
]

[project.scripts]
nn-pipeline = "cli.build_ragpack:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunker*", "embedder*", "ragpack*", "cli*"]

