[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noesisnoema-pipeline"
version = "0.4.0"
description = "Deterministic RAGPack generator — RAGpack v1.2 (llama.cpp embedder)"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.20.0",
    "llama-cpp-python>=0.3.0",
    # Layout-aware PDF extraction (preserves inter-word whitespace; bake-off winner).
    "pymupdf>=1.24.0",
    # DEPRECATED (v1.1 path); removed in a follow-up once v1.2 is verified.
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.21.0",
    "pyarrow>=14.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
nn-pipeline = "cli.build_ragpack:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunker*", "embedder*", "ragpack*", "cli*", "writer*", "extraction*"]

[tool.setuptools.package-data]
# Bundled common-English word list used by the extraction-quality gate.
extraction = ["data/*.gz"]
